# lean-fuzz-experiments

./: .env.example  .gitignore  CLAUDE.md  FINDINGS.md  Makefile  PARALLEL.md  README.md  README.old.md  lefthook.yml  run_parallel.sh
.github/workflows/: ci.yml
artifacts/text2text-agents/: Makefile  README.md
cases/differential-1-vm-kernel/: Makefile  output.txt  test.lean
cases/implementation-1-ffi-unsafe/: README.md
cases/implementation-2-native-codegen/: Makefile  test.c
cases/parser-1-malformed-input/: Makefile  long_id.lean  null_bytes.lean  unicode_test.lean
cases/serialize-1-olean-corruption/: Makefile  test.lean  test.olean  test.olean.orig
cases/soundness-1-universe-poly/: Makefile
cases/soundness-2-recursive-defs/: Makefile  test.lean
cases/soundness-3-inductive-types/: Makefile  README.md
cases/soundness-4-macro-exploit/: README.md  output.txt  test.lean
cases/soundness-5-quot-axiom/: Makefile  output.txt
cases/soundness-6-elaborator-typeclass/: Makefile  test.lean
cases/soundness-7-environment-manipulation/: test.lean
claude-1-results/: .gitignore  ADVANCED_FINDINGS.md  ANSWERING_YOUR_QUESTIONS.md  DEEP_EXPLOITATION.md  FINAL_REPORT.md  MEMORY_CORRUPTION_DEEPDIVE.md  MEMORY_CORRUPTION_SUMMARY.md  REAL_ATTACKS_SUMMARY.md  SOUNDNESS_VS_IMPLEMENTATION.md
claude-2-results/: AUTOMATED_CHECKER_SECURITY.md  COMPREHENSIVE_AUDIT_REPORT.md  CORRECTED_ASSESSMENT.md  CRITICAL_FINDINGS_README.md  DEEP_ANALYSIS_INDEX.md  DEEP_CURL_ANALYSIS.md  EXECUTIVE_SUMMARY.md  FINAL_REPORT.md  FUZZING_RESULTS.md  INDEX.md  MASTER_SUMMARY.md  fuzz_harness.py
claude-2-results/cases/: advanced-1-universe-imax.lean  advanced-10-unsafe-ffi.lean  advanced-3-pattern-matching.lean  advanced-5-definitional-equality.lean  advanced-6-elaborator-metaprog.lean  advanced-7-compiler-backend.lean  advanced-9-olean-exploit.lean  deep-4-skipkernel-test.lean  exploit-2-skipkernel-import.lean  exploit-3-skipkernel-env.lean  exploit-4-skipkernel-lakefile.lean  exploit-5-curl-mitm.lean  exploit-7-metaprogramming-skipkernel.lean  (+3 more)
claude-3-results/: EXECUTIVE-SUMMARY.md  FINAL-SUMMARY.md  MASTER-AUDIT-SUMMARY.md  README.md  UNEXPLORED-SOUNDNESS-THREATS.md
docs/: attack-surface.md  design-plan.md  llm-guided-refinement.md
generator/: Cargo.toml  README.md
generator/lean_parse_check/: Main.lean  lake-manifest.json  lakefile.toml
generator/lean_parse_check/workdir/outputs/chunks/: chunk_000000000  chunk_000000001  chunk_000000002
generator/src/: grammar.rs  lib.rs  main.rs  rule_coverage.rs
generator/tests/: generation.rs  mutation.rs  stress.rs
scaffold/: CLAUDE.md  README.md  pyproject.toml
scaffold/src/scaffold/: __init__.py  campaign_report.py  corpus_tier.py  diagnostic_log.py  diagnostics.py  executor.py  golden_suffixes.py  grammar_refiner.py  models.py  oracle.py  runner.py
scaffold/src/scaffold/baml_src/: CLAUDE.md
scaffold/src/stress_gen/: CLAUDE.md  README.md  __init__.py
scaffold/src/tests/: __init__.py  test_diagnostics.py  test_integration.py  test_prefix_contract.py
scaffold/src/tests/fixtures/: clean_prefix.lean  mixed_errors.lean  parse_error.lean  type_mismatch.lean  unknown_id.lean
scripts/: continuous_fuzz.sh
template/: Challenge.lean  Solution.lean  comparator_config.json  lakefile.toml
(+192 files in other folders)
