[project]
name = "scaffold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Quinn Dougherty", email = "quinn@for-all.dev" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
scaffold = "scaffold:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
