[project]
name = "scaffold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Quinn Dougherty", email = "quinn@for-all.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "baml-py>=0.218.1",
    "fastapi>=0.128.4",
    "pydantic>=2.12.5",
    "typer>=0.21.1",
    "rich>=13.7.0",
]

[project.scripts]
scaffold = "scaffold.runner:main"
stress-gen = "stress_gen:main"

[tool.ruff.lint]
select = ["F", "UP", "I", "D", "PT"]

[tool.ruff.lint.per-file-ignores]
"src/scaffold/runner.py" = ["PT"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.151.5",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
